# C-testing-examples

./: C++Sample-Test1.sln
C++Sample-Test1/: C++Sample-Test1.vcxproj  CMakeLists.txt  SampleProgram.cpp  Test.h  test.cpp
C++Sample-Test1/Debug/C++Sample-Test1.tlog/: C++Sample-Test1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog
C++Sample-Test1/x64/Debug/: C++Sample-Test1.exe.recipe  C++Sample-Test1.vcxproj.FileListAbsolute.txt
C++Sample-Test1/x64/Debug/C++Sample-Test1.tlog/: C++Sample-Test1.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: C++Sample-Test1.exe.gta.testdurations
